fix(selectable-card): prevent overflow style cut out (#1410)

--- a/projects/ng-aquila/src/card/selectable-card.component.scss
+++ b/projects/ng-aquila/src/card/selectable-card.component.scss
@@ -60,7 +60,7 @@
 
 :host(:not(.is-expert)) {
     .content {
-        overflow: hidden;
+        display: flow-root;
         padding-left: nx-spacer(s);
 
         :host-context([dir='rtl']) & {
